[tool.poetry]
name = "hmw4"
version = "0.1.0"
description = "homework4"
authors = ["TimurVerba <135266210+TimurVerba@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
